--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
       }
     ]
   },
-  "license": "MIT"
+  "license": "LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Carlos9905/odoo-widget"
+  },
+  "icon": "images/icon.png"
 }
