--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "type": "git",
     "url": "https://github.com/Carlos9905/odoo-widget"
   },
-  "icon": "images/icon.png"
+  "icon": "images/icon.png",
+  "homepage": "https://github.com/Carlos9905/odoo-widget/blob/main/README.md"
 }
